<resources>
    <string name="app_name">PR10</string>
    <string name="cancle">Cancle</string>
    <string name="_00_30_54">00:30:54</string>
    <string name="cancle">Cancle</string>
    <string name="_0">На сегодня открытых дел:0</string>
    <string name="p">Пауза</string>
    <string name="c">Сбросить</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="_1">1</string>
    <string name="cancle">Cancle</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="cancle">Cancle</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="cancle">Cancle</string>
    <string name="_00_30_54">00:30:54</string>
    <string name="wsk_police">WSK Police</string>
    <string name="_10_09">10:09</string>
    <string name="todo">TODO</string>
</resources>